--- a/.editorconfig
+++ b/.editorconfig
@@ -7,7 +7,7 @@ root = true
 
 [*]
 
-indent_style = space
+indent_style = tab
 indent_size = 4
 
 end_of_line = lf
@@ -19,4 +19,4 @@ insert_final_newline = true
 trim_trailing_whitespace = false
 
 [{*.json,*.yml}]
-indent_size = 2
+indent_size = 4
